# ace

./: .coverage  .env.example  .gitignore  .readthedocs.yaml  4secondLoop.py  4second_correlation_analysis.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CSV.py  CropGUI.py  DATA_INGESTION_LOG.md  DESTINATION FILE ON YOUR DISK  EEG.py  ERISTwo_script.py  GETTING_STARTED.md  LMM Rough Draft.R  MeanFluor_Corr.py  README.md  README2.md  analysis_parameters.csv  avgMean_Corr.py  confirm_Ca_movies_1000_frames_script.py  convert_to_tif_and_concatenate_script.py  crop_and_calculate_delta_f_over_f.py  crop_and_create_time_projection_entire_miniscope_recording.py  crop_entire_miniscope_recording.py  cross_spectral_density_script.py  entire_time_projection_movie_by_movie.py  environment.yml  ephys.py  experiment.py  experiments.csv  find_all_nonTTL_events_script.py  find_crop_coordinates_for_sample_miniscope_recording.py  find_max_correlation_sliding_script.py  find_miniscope_movies_to_analyze.py  find_number_of_ephys_segments.py  find_start_time_of_experiments.py  linux_environment.yml  load_ephys_and_agent_analyzer.py  (+41 more)
.cursor/plans/: docs_cleanup_plan_6e2ff612.plan.md
.github/workflows/: docs-build.yml  mkdocs-gh-pages.yml  push-mirror-from-upstream.workflow.yml  python-app.yml
.ipynb_checkpoints/: avgMean_Corr-checkpoint.py
classes/: __init__.py  ephys.py  experiment.py  miniscope.py  miniscope_ephys.py
data/: BLANK_box_credentials.py  __init__.py  analysis_parameters.csv  analysis_parameters_correlation_project.csv  experiments.csv  experiments_correlation_project.csv  file_downloader.py
docs/: deployment.md  examples.md  getting_started.md  index.md  rtd-requirements.txt
docs/api/: ephys.md  index.md  miniscope.md  multimodal.md  pipelines.md  shared.md
docs/guides/: adding_data_loaders.md  data_management.md  ephys.md  miniscope.md  multimodal.md
docs/notebooks/: ephys_pipeline_tutorial.ipynb  miniscope_pipeline_tutorial.ipynb  multimodal_alignment_tutorial.ipynb
examples/: explicit_paths_demo.py
examples/example_project/: README.md  run_analysis.py
experiment_analysis/: miniscope.py
notebooks/: ephys_pipeline_tutorial.ipynb  miniscope_pipeline_tutorial.ipynb  multimodal_alignment_tutorial.ipynb
requirements_windows/: miniscope_ephys.yml  requirements.txt
scripts/: build_tutorial_notebooks.py  create_file_path.py  create_test_data.py  find_max_correlation_sliding_script.py  measure_std_of_cropped_area_over_time_script.py  process_sample_miniscope_recordings_script.py  projection_generation_script.py  scratch.py  sync_notebooks_for_docs.sh  truncate_data_types.py  visualize_estimates_data.py
scripts/archive/: miniscope_ephys_correlation.py
site/: 404.html  index.html  objects.inv
site/getting_started/: index.html
site/search/: search_index.json
src/: __init__.py  misc_functions.py
src/Poster Results/: dex_avg_data.csv  dex_data.csv  sleep_avg_data.csv  sleep_data.csv
src/ace_neuro/: __init__.py
src/classes/: ephys.py  experiment.py  miniscope.py  miniscope_ephys.py  untitled0.py
src/scripts/: __init__.py  coherogram_script copy.py  coherogram_script.py  create_file_path.py  crop_and_create_time_projection_entire_miniscope_recording.py  (+19 more)
src2/: CNMFE_demo.py  all_ephys.py  block_processor.py  channel.py  data_manager.py  ephys_data_manager.py  ephys_workflow.py  miniscope_data_manager.py  miniscope_manager.py  miniscope_processor copy.py  misc_functions.py  outline.py  path_finder.py  paths.py  playground.py  projections.py  visualizer.py
tests/: conftest.py  test_alignment_utils.py  test_autodetect.py  test_ephys_pipeline_unit.py  test_experiment_data_manager.py  test_miniscope_pipeline_unit.py  test_pipeline_e2e.py  test_pipeline_error_handling.py  test_pipeline_integration.py  test_sync.py
(+121 files in other folders)
